# face_track_gimbal

./: .pre-commit-config.yaml  LICENSE  README.md
face_track_ctrl/: CMakeLists.txt  run.sh
face_track_ctrl/include/: app.h  app_threads.h  camera.h  config.h  fps_counter.h  frame_processor.h  gimbal_controller.h  serial_port.h  thread_safe_queue.h  visualizer.h  yolo_onnx_runtime.h
face_track_ctrl/include/telemetry/: data_logger.h  offset_metric.h  system_info.h  system_metric.h
face_track_ctrl/src/: app.cpp  app_threads.cpp  camera.cpp  config.cpp  fps_counter.cpp  frame_processor.cpp  gimbal_controller.cpp  main.cpp  serial_port.cpp  visualizer.cpp  yolo_onnx_runtime.cpp
face_track_ctrl/src/telemetry/: data_logger.cpp  offset_metric.cpp  system_info.cpp  system_metric.cpp
scripts/: .gitignore  0_yolo5_inference_demo.py  10_usage_visualizer.py  1_extract_fp16.py  2_compare_FP32_and_FP16.py  3_extract_onnx.py  4_compare_onnx_and_pt.py  5_save_dx_dy.py  6_mock_serial_stream.py  7_face_track_gimbal.py  8_plot_offsets.py  9_monitor.sh  requirements.txt
scripts/data/: offsets.csv  system_info.csv
scripts/log/: dx_dy_log.csv
servo_control/: .cproject  .gitignore  .mxproject  .project  servo_control.ioc
servo_control/Core/Inc/: freertos_queue.h  servo_control.h  stm32f1xx_it.h  uart1_send_dma.h  uart2_receive.h
servo_control/Core/Src/: dma.c  freertos.c  freertos_queue.c  main.c  servo_control.c  stm32f1xx_it.c  tim.c  uart1_send_dma.c  uart2_receive.c  usart.c
